--- a/css/bootstrap-datadictpicker.css
+++ b/css/bootstrap-datadictpicker.css
@@ -1,37 +1,70 @@
-.input-append.datadict-picker .add-on i,
-.input-prepend.datadict-picker .add-on i,
-.input-group.datadict-picker .input-group-addon span {
+.datadict-picker .add-on,
+.datadict-picker .add-on i,
+.datadict-picker .input-group-addon,
+.datadict-picker .input-group-addon span {
 	cursor: pointer;
-	width: 14px;
-	height: 14px;
 }
 
-.datadictpicker-modal {
+.datadictpicker-modal, 
+.datadictpicker-modal-v3  .modal-dialog {
 	width: 650px;
 }
-.datadictpicker-modal .modal-footer .form-search {
+.datadictpicker-modal .modal-footer .form-search,
+.datadictpicker-modal-v3 .modal-footer #searchPanel {
 	float:left;
 	margin:0;
 }
-
-.datadictpicker-modal .modal-header {
+.datadictpicker-modal-v3 .modal-footer #searchPanel {
+	/*width: 450px;*/
+}
+.datadictpicker-modal .modal-footer .form-search #pager-total,
+.datadictpicker-modal .modal-footer .form-search #pager,
+.datadictpicker-modal-v3 .modal-footer #searchPanel #pager-total,
+.datadictpicker-modal-v3 .modal-footer #searchPanel #pager {
+	padding-left: 5px;
+	padding-right: 5px;
+	text-align: center;
+}
+.datadictpicker-modal-v3 .modal-footer #searchPanel .btn+.btn {
+	margin-left:0;
+}
+.datadictpicker-modal-v3 .modal-footer #searchPanel .search-input {
+	width: 200px;
+}
+.datadictpicker-modal-v3 .modal-footer #searchPanel .pager-input {
+	width: 180px;
+}
+.datadictpicker-modal .modal-header{
 	padding: 0 15px;
 }
-
-.datadictpicker-modal .modal-body {
+.datadictpicker-modal-v3 .modal-header{
+	padding: 5px 15px;
+}
+.datadictpicker-modal .modal-body,
+.datadictpicker-modal-v3 .modal-body {
 	max-height: 300px;
 	height: 300px;
 }
-
-.datadictpicker-modal .modal-body table {
+.datadictpicker-modal .modal-body table,
+.datadictpicker-modal-v3 .modal-body table {
 	margin-bottom:0;
 }
-.datadictpicker-modal .modal-body th {
+.datadictpicker-modal .modal-body th,
+.datadictpicker-modal-v3 .modal-body th {
 	text-align: center;
 }
-.datadictpicker-modal .modal-body td {
+.datadictpicker-modal .datadict-picker-tab-col-selector {
+	width: 35px;
+}
+.datadictpicker-modal-v3 .datadict-picker-tab-col-selector {
+	width: 45px;
+}
+.datadictpicker-modal .modal-body td,
+.datadictpicker-modal-v3 .modal-body td  {
 	cursor: pointer;
 }
-.datadictpicker-modal .modal-body td.selector {
+.datadictpicker-modal .modal-body td.selector,
+.datadictpicker-modal-v3 .modal-body td.selector {
 	text-align: center;
 }
+
